--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only backend/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only backend/server.ts",
+    "client": "npm start --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1"
   },
