--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node build/server.js",
     "dev": "ts-node-dev --respawn --transpile-only backend/server.ts",
-    "client": "npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "dev-concurrently": "concurrently \"npm run dev\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -33,6 +34,7 @@
     "@types/lodash": "^4.14.185",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^18.7.19",
+    "concurrently": "^7.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
